Minor warning tweaks